Maquetado e inicialización de mapa

--- a/index.html
+++ b/index.html
@@ -1,12 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>VRECO</title>
+  <title>easyVreco</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+  <link rel="stylesheet" href="assets/css/style.css">
+
 </head>
+
 <body>
-  
+  <div class="container">
+    <div class="row">
+      <form action="">
+        <div class="col-md-2 col-md-offset-2 align-bottom">
+          <button class="btn btn-warning center-block ">Encuéntrame</button>
+        </div>
+        <div class="form-group col-md-2">
+          <label for="">Origen</label>
+          <div>
+            <input type="text" name="" id="search_location" />
+          </div>
+        </div>
+        <div class="form-group col-md-2">
+          <label for="">Destino</label>
+          <div>
+            <input type="text" name="" id="" />
+          </div>
+        </div>
+        <div class="col-md-1">
+          <button class="btn btn-warning">Ruta</button>
+        </div>
+      </form>
+    </div>
+    <section>
+      <div class="row">
+        <div class="col-md-12" id="map"></div>
+      </div>
+    </section>
+  </div>
+  <!-- <script src="http://maps.googleapis.com/maps/api/js?v3"></script> -->
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtrAzcFTqaKEN7gi4u28DWP5vfXqaobHM"></script>
+  <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script src="assets/js/app.js"></script>
 </body>
+
 </html>
