--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         <div class="form-group col-md-2">
           <label for="">Origen</label>
           <div>
-            <input type="text" name="" id="search_location" />
+            <input type="text" name="" id="origin" />
           </div>
         </div>
         <div class="form-group col-md-2">
           <label for="">Destino</label>
           <div>
-            <input type="text" name="" id="" />
+            <input type="text" name="" id="final" />
           </div>
         </div>
         <div class="col-md-1">
@@ -43,11 +43,11 @@
     </section>
   </div>
   <!-- <script src="http://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places"></script> -->
-  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtrAzcFTqaKEN7gi4u28DWP5vfXqaobHM"></script>
-  <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-  <script src="assets/js/app.js"></script>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtrAzcFTqaKEN7gi4u28DWP5vfXqaobHM&libraries=places"></script>
+  <script src="http://code.jquery.com/jquery-3.3.1.min.js " integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin=" anonymous "></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js "></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js " integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa " crossorigin="anonymous "></script>
+  <script src="assets/js/app.js "></script>
 </body>
 
 </html>
