trazado de ruta y cambio de icono del marker

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="row">
       <form action="">
         <div class="col-md-2 col-md-offset-2 align-bottom">
-          <button class="btn btn-warning center-block ">Encuéntrame</button>
+          <button class="btn btn-warning center-block" id="find">Encuéntrame</button>
         </div>
         <div class="form-group col-md-2">
           <label for="">Origen</label>
@@ -32,7 +32,7 @@
           </div>
         </div>
         <div class="col-md-1">
-          <button class="btn btn-warning">Ruta</button>
+          <button type="button" class="btn btn-warning" id="route">Ruta</button>
         </div>
       </form>
     </div>
@@ -42,8 +42,8 @@
       </div>
     </section>
   </div>
-  <!-- <script src="http://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places"></script> -->
-  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtrAzcFTqaKEN7gi4u28DWP5vfXqaobHM&libraries=places"></script>
+  <!--<script src="http://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places"></script>-->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtrAzcFTqaKEN7gi4u28DWP5vfXqaobHM&libraries=places"></script>
   <script src="http://code.jquery.com/jquery-3.3.1.min.js " integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin=" anonymous "></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js "></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js " integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa " crossorigin="anonymous "></script>
