Funcionalidad boton encuentrame

--- a/index.html
+++ b/index.html
@@ -15,30 +15,30 @@
 <body>
   <div class="container">
     <div class="row">
-      <form action="">
-        <div class="col-md-2 col-md-offset-2 align-bottom">
-          <button class="btn btn-warning center-block" id="find">Encuéntrame</button>
+      <form>
+        <div class=" col-sm-3 col-md-2 col-lg-2 col-md-offset-2 align-bottom">
+          <button type="button" class="btn btn-warning center-block" id="find">Encuéntrame</button>
         </div>
-        <div class="form-group col-md-2">
+        <div class="form-group col-sm-3 col-md-2 col-lg-2">
           <label for="">Origen</label>
           <div>
-            <input type="text" name="" id="origin" />
+            <input type="text" id="origin" />
           </div>
         </div>
-        <div class="form-group col-md-2">
+        <div class="form-group col-sm-3 col-md-2 col-lg-2">
           <label for="">Destino</label>
           <div>
-            <input type="text" name="" id="final" />
+            <input type="text" id="final" />
           </div>
         </div>
-        <div class="col-md-1">
+        <div class="col-sm-2 col-md-1 col-lg-1">
           <button type="button" class="btn btn-warning" id="route">Ruta</button>
         </div>
       </form>
     </div>
     <section>
       <div class="row">
-        <div class="col-md-12" id="map"></div>
+        <div class="col-md-12 col-lg-12 col-xs-12" id="map"></div>
       </div>
     </section>
   </div>
