resolviendo problema con api

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
       </div>
     </section>
   </div>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtrAzcFTqaKEN7gi4u28DWP5vfXqaobHM&libraries=places"></script>
+
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAR4ap4uDnh0CE1Cu7qpmFJaJJTO-1vmkM&libraries=places"></script>
+  <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtrAzcFTqaKEN7gi4u28DWP5vfXqaobHM&libraries=places"></script>-->
   <script src="http://code.jquery.com/jquery-3.3.1.min.js " integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin=" anonymous "></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js "></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js " integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa " crossorigin="anonymous "></script>
